[gd_scene load_steps=3 format=3 uid="uid://d00jru22ui7qp"]

[ext_resource type="Script" uid="uid://ccbxysbnq2r84" path="res://UI/win_screen.gd" id="1_k7uma"]
[ext_resource type="Texture2D" uid="uid://c8qbwipy7qepc" path="res://Assets/pixelNoodles.jpg" id="2_46rli"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k7uma")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_46rli")
expand_mode = 2
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label_you_won" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="Button_play_again" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="Button_quit" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="TextureRect/VBoxContainer/Button_play_again" to="." method="_on_button_play_again_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Button_quit" to="." method="_on_button_quit_pressed"]
